--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+*,
+*::after,
+*::before {
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    font-size: 62.5%;
+    min-width: 320px;
+    line-height: 1.15;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    display: block;
+}
+
 body {
     font-size: 1.6rem;
     line-height: 1.5;
@@ -9,4 +25,17 @@ body {
     padding-left: 13rem;
     overflow-y: scroll;
     overflow-x: hidden;
+    margin: 0;
+}
+
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    body {
+        padding-left: 0;
+    }
 }
