--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -39,6 +39,7 @@
 }
 
 .heading > span {
+    display: inline-block;
     -webkit-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
