Add hover effect to heading

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,6 +45,10 @@
     transition: all 0.3s ease-out;
 }
 
+.heading > span:hover {
+    color: #08fdd8;
+}
+
 .section-wrapper .text-zone p {
     -webkit-transform: translateY(0px);
     -ms-transform: translateY(0px);
