--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -81,6 +81,9 @@
     letter-spacing: 4px;
     text-decoration: none;
     width: 100%;
+    max-width: 220px;
+    height: 50px;
+    line-height: 50px;
     margin-top: 30px;
     position: relative;
     display: block;
