--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -34,7 +34,7 @@
     font-family: Helvetica;
     font-weight: 400;
     font-size: 10.3rem;
-    line-height: 8.7rem;
+    line-height: 9.7rem;
     position: relative;
 }
 
@@ -126,7 +126,7 @@
 
 @media screen and (max-width: 900px) {
     .heading {
-        font-size: 8rem;
+        font-size: 6.8rem;
         line-height: 7rem;
     }
 
@@ -140,13 +140,13 @@
         padding: 9rem 3rem;
     }
 
-    .text-zone {
-        padding-left: 0rem;
+    .section-full .text-zone {
+        padding-left: 0;
         padding-right: 0;
     }
 
     .heading {
-        font-size: 5.3rem;
+        font-size: 4.2rem;
         line-height: 4.5rem;
     }
 
@@ -171,7 +171,7 @@
 
 @media screen and (max-width: 380px) {
     .heading {
-        font-size: 4.2rem;
+        font-size: 3.6rem;
         line-height: 3.6rem;
     }
 
