Add text styles

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -17,3 +17,33 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
+
+.section-about .text-zone {
+    width: 40%;
+}
+
+.section-full .text-zone {
+    padding-left: 5rem;
+}
+
+.text-zone header {
+    position: relative;
+}
+
+h2 {
+    font-family: Helvetica;
+    color: #08fdd8;
+    font-weight: 400;
+    margin-top: 0;
+    position: relative;
+    margin-bottom: 40px;
+    left: -10px;
+    font-size: 7.3rem;
+    line-height: 6.7rem;
+}
+
+.text-zone p {
+    position: relative;
+    margin-bottom: 1.5rem;
+    text-align: justify;
+}
