Add transition to blast text

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -44,6 +44,9 @@ h2 {
 
 .text-zone span {
     display: inline-block;
+    -webkit-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
 }
 
 .text-zone p {
