--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -55,6 +55,30 @@ h2 {
     text-align: justify;
 }
 
+.section-about .skills-chart {
+    width: 60%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    text-transform: uppercase;
+    color: #08fdd8;
+    opacity: 0.8;
+}
+
+.section-about .tagcloud {
+    display: inline-block;
+    top: 0;
+    left: 0;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    letter-spacing: 0.0625em;
+    font-size: 1.3em;
+}
+
 @media screen and (max-width: 1100px) {
     .section-full .text-zone {
         padding-left: 2rem;
@@ -69,6 +93,10 @@ h2 {
         font-size: 6.5rem;
         line-height: 6rem;
     }
+
+    .section-about .skills-chart {
+        width: 50%;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -82,6 +110,11 @@ h2 {
 
     .text-zone h2 {
         line-height: 4.9rem;
+    }
+
+    .section-about .skills-chart {
+        position: static;
+        width: 100%;
     }
 }
 
