--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -55,6 +55,37 @@ h2 {
     text-align: justify;
 }
 
+.section-about .skills-charts {
+    width: 60%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.section-about #canvas-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.section-about #canvas {
+    margin: auto;
+    width: 100%;
+}
+
 @media screen and (max-width: 1100px) {
     .section-full .text-zone {
         padding-left: 2rem;
@@ -69,6 +100,10 @@ h2 {
         font-size: 6.5rem;
         line-height: 6rem;
     }
+
+    .section-about .skills-charts {
+        width: 50%;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -82,6 +117,11 @@ h2 {
 
     .text-zone h2 {
         line-height: 4.9rem;
+    }
+
+    .section-about .skills-charts {
+        position: static;
+        width: 100%;
     }
 }
 
