--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -55,7 +55,7 @@ h2 {
     text-align: justify;
 }
 
-.section-about .skills-charts {
+.section-about .skills-chart {
     width: 60%;
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
@@ -101,7 +101,7 @@ h2 {
         line-height: 6rem;
     }
 
-    .section-about .skills-charts {
+    .section-about .skills-chart {
         width: 50%;
     }
 }
@@ -119,7 +119,7 @@ h2 {
         line-height: 4.9rem;
     }
 
-    .section-about .skills-charts {
+    .section-about .skills-chart {
         position: static;
         width: 100%;
     }
