Fix heading font-size for different screens

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -144,14 +144,15 @@ h2 {
 @media screen and (max-width: 480px) {
     .text-zone h2,
     h2 {
-        font-size: 4.5rem;
+        font-size: 4.4rem;
         line-height: 4.2rem;
     }
 }
 
 @media screen and (max-width: 380px) {
+    .text-zone h2,
     h2 {
-        font-size: 4rem;
+        font-size: 3.5rem;
         line-height: 4rem;
     }
 }
