Make section responsive

--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,5 +1,9 @@
-.section-full {
+#projects {
     min-height: 100vh;
+}
+
+.section-full {
+    min-height: 100%;
     padding: 9rem 3rem;
     position: relative;
     opacity: 1;
@@ -56,7 +60,7 @@ h2 {
 }
 
 .projects-section {
-    padding: 9rem 3rem;
+    padding: 0 3rem;
     position: relative;
 }
 
@@ -111,6 +115,14 @@ h2 {
     h2 {
         font-size: 5.5rem;
         line-height: 6rem;
+    }
+
+    .projects-section {
+        padding: 9rem 3rem;
+    }
+
+    .projects-details {
+        padding: 0;
     }
 }
 
