--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,8 +17,7 @@
     border-top: 2px solid #fd2155;
     overflow: hidden;
     margin-bottom: 5rem;
-    /* width: 32%; */
-    width: 48%;
+    width: 32%;
 }
 
 .content {
@@ -53,4 +52,16 @@
     margin-bottom: -1rem;
     margin-top: 1rem;
     display: block;
+}
+
+@media screen and (max-width: 1100px) {
+    .card {
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .card {
+        width: 100%;
+    }
 }
