--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -19,7 +19,8 @@
 }
 
 .section-contact .text-zone {
-    width: 40%;
+    width: 50%;
+    padding-right: 5rem;
 }
 
 .section-full .text-zone {
@@ -129,6 +130,10 @@ h2 {
 
 .input-field:focus ~ .focus {
     background-position: left bottom;
+}
+
+.row:last-of-type {
+    justify-content: flex-end;
 }
 
 @media screen and (max-width: 1100px) {
