remove placeholder on focus

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -132,6 +132,10 @@ h2 {
     background-position: left bottom;
 }
 
+.input-field:focus::placeholder {
+    color: transparent;
+}
+
 .row:last-of-type {
     justify-content: flex-end;
 }
