Add style for error

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -136,6 +136,10 @@ h2 {
     color: transparent;
 }
 
+.error ~ .focus {
+    background: red;
+}
+
 .row:last-of-type {
     justify-content: flex-end;
 }
