--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -144,7 +144,12 @@ h2 {
     justify-content: flex-end;
 }
 
-
+.shapes-container {
+    flex-grow: 1;
+    display: grid;
+    place-items: center;
+    padding-top: 5rem;
+}
 
 @media screen and (max-width: 1100px) {
     .section-full .text-zone {
