--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -20,7 +20,7 @@
     background: transparent;
     width: 5rem;
     aspect-ratio: 1 / 1;
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 40px;
     display: flex;
