--- a/src/pages/Nav/Nav.css
+++ b/src/pages/Nav/Nav.css
@@ -60,3 +60,13 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+.link > a,
+.icons a {
+    transition: all 0.3s ease;
+}
+
+.link > a:hover,
+.icons a:hover {
+    color: #08fdd8;
+}
