--- a/src/pages/Nav/Nav.css
+++ b/src/pages/Nav/Nav.css
@@ -70,3 +70,22 @@ a {
 .icons a:hover {
     color: #08fdd8;
 }
+
+@media screen and (max-width: 600px) {
+    #nav {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+
+    .icons-wrapper {
+        max-width: 100%;
+    }
+
+    .icons {
+        gap: 50px;
+    }
+
+    .links {
+        font-size: 6rem;
+    }
+}
