change padding for small screens

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -198,6 +198,10 @@ h2 {
 }
 
 @media screen and (max-width: 480px) {
+    .section-full {
+        padding: 7rem 2.5rem;
+    }
+
     .text-zone h2,
     h2 {
         font-size: 4.4rem;
