--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -162,6 +162,10 @@
 }
 
 @media screen and (max-width: 480px) {
+    .section-full {
+        padding: 7rem 2.5rem;
+    }
+
     .contact {
         max-width: 170px;
         height: 40px;
